# Kargin-CS-Labs-2Sem

./: CMakeLists.txt  README.md  main.cpp
mymath/: CMakeLists.txt  mymath.cpp  mymath.h
try/: CMakeLists.txt  lab1  main.cpp
